	Fixes to the documentation in es.params
	CrossoverPipeline, MutationPipeline, and InternalCrossoverPipeline 
		have their verifyPoints function made public.
	Additions to spea2/README
	Added a warning about incorrect max and min gene lengths.  This makes
		list representations a little easier.  Changes to 
		FloatVectorSpecies, IntegerVectorSpecies, and VectorSpecies
	Bug fix to RuleCrossover's crossover procedure.
	Vestigial 'num-retries' removed from SteadyStateBreeder
	Reformated the CHANGES file to fit within 80 characters
	Added BoltzmannSelection and SigmaScalingSelection, both due to
		Jack Compton <jack.compton@gmail.com>.
	Added ListCrossoverPipeline, due to Stephen Donelly <sdonnel4@gmu.edu>
	Added MultipleVectorCrossoverPipeline, due to Beenish Jamil
		<bjamil@gmu.edu>
	Added the evolve package
	Added Line and Intermediate Recombination for all integer and
		float vector individuals.  Due to William Haddon
		<whaddon@gmu.edu>
	Added random restarts to the evolve package.  Due to James O'Beirne
		<jobeirne1@gmu.edu>		
	Added distance measures to Individual and to various subclasses.  Due
		to Eric Kangas <ekangas@gmu.edu>
	Reformatted

20      You call that a prerelease?  THIS is a prerelease.
	Added default parameter to FloatVector mutation.  Thanks to Elena
		Popovici <elena@icosystem.com>
	Tweaks to Makefile for moosuite
	Modifications to Tutorial3 to reflect the new population loading
		mechanism.  Thanks to Bernd Beier <Bernd.Beier@gft.com>
	Tweaks to Tutorial3 and ecsuite to reflect additions of gaussian
		convolution.
	Tweaks to the error reporting in Code.java, Subpopulation, and 
		FloatVectorSpecies
	Bug fix to Frog.java: it wasn't calling its subtree at all.  This
		is a very old bug it would seem; though Lawnmower's less
		used.  Thanks to Randy Casstevens <rcasstev@gmu.edu>
	Updates to start/README directory -- somehow we'd slipped in he
		MASON version, not the ECJ version.  Duh!  Thanks to
		Jeff Bassett <jbassett@cs.gmu.edu>